--- a/src/StringMaster/Resources/ToolTips.xaml
+++ b/src/StringMaster/Resources/ToolTips.xaml
@@ -1,4 +1,7 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:extensions="clr-namespace:StringMaster.Extensions">
     <DataTemplate x:Key="AddRowToolTipContent">
         <StackPanel>
             <TextBlock FontWeight="Bold" Text="Add Row" />
@@ -25,8 +28,8 @@
     </DataTemplate>
     <DataTemplate x:Key="StringCogoPointsToolTipContent">
         <StackPanel>
-            <TextBlock FontWeight="Bold" Text="Connect Linework" />
-            <TextBlock Text="Connects all CogoPoints in drawing using the specified description key set." />
+            <TextBlock FontWeight="Bold" Text="{extensions:ResourceExtension Name=StringCogoPoints}" />
+            <TextBlock Text="{extensions:ResourceExtension Name=StringCogoPointsToolTipContent}" />
         </StackPanel>
     </DataTemplate>
 </ResourceDictionary>
