--- a/src/StringMaster/Resources/DataGrid.xaml
+++ b/src/StringMaster/Resources/DataGrid.xaml
@@ -20,8 +20,20 @@
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="HeaderStyle" TargetType="{x:Type DataGridColumnHeader}">
+    <Style x:Key="DataGridHeader" TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="HorizontalContentAlignment" Value="Center" />
+    </Style>
+
+    <Style x:Key="DataGridCellCenter" TargetType="{x:Type DataGridCell}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type DataGridCell}">
+                    <Grid Background="{TemplateBinding Background}">
+                        <ContentPresenter VerticalAlignment="Center" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <ResourceDictionary.MergedDictionaries>
