--- a/src/StringMaster/UserControls/StringCogoPointsView.xaml
+++ b/src/StringMaster/UserControls/StringCogoPointsView.xaml
@@ -1,12 +1,11 @@
 ﻿<UserControl
-    x:Class="StringMaster.UserControls.StringCogoPoints"
+    x:Class="StringMaster.UserControls.StringCogoPointsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:extensions="clr-namespace:StringMaster.Extensions"
+    xmlns:helpers="clr-namespace:StringMaster.Helpers"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:StringMaster.Models"
-    xmlns:viewModels="clr-namespace:StringMaster.ViewModels"
     d:DataContext="{d:DesignData StringCogoPointsViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -131,32 +130,32 @@
                 <DataGridTextColumn
                     Width="80"
                     Binding="{Binding Key, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Header="{extensions:ResourceExtension Name=ColumnHeaderKey}" />
+                    Header="{helpers:ResourceHelper Name=ColumnHeaderKey}" />
                 <DataGridTextColumn
                     Width="150"
                     Binding="{Binding Layer, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Header="{extensions:ResourceExtension Name=ColumnHeaderLayer}" />
+                    Header="{helpers:ResourceHelper Name=ColumnHeaderLayer}" />
                 <DataGridTextColumn
                     Width="200"
                     Binding="{Binding Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Header="{extensions:ResourceExtension Name=ColumnHeaderDescription}" />
+                    Header="{helpers:ResourceHelper Name=ColumnHeaderDescription}" />
                 <DataGridCheckBoxColumn
                     Width="50"
                     Binding="{Binding Draw2D, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Header="{extensions:ResourceExtension Name=ColumnHeader2D}" />
+                    Header="{helpers:ResourceHelper Name=ColumnHeader2D}" />
                 <DataGridCheckBoxColumn
                     Width="50"
                     Binding="{Binding Draw3D, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Header="{extensions:ResourceExtension Name=ColumnHeader3D}" />
+                    Header="{helpers:ResourceHelper Name=ColumnHeader3D}" />
                 <DataGridCheckBoxColumn
                     Width="50"
                     Binding="{Binding DrawFeatureLine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Header="{extensions:ResourceExtension Name=ColumnHeaderFeatureLine}" />
+                    Header="{helpers:ResourceHelper Name=ColumnHeaderFeatureLine}" />
                 <DataGridTextColumn
                     Width="50"
                     Binding="{Binding MidOrdinate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, FallbackValue=0.01}"
-                    Header="{extensions:ResourceExtension Name=ColumnHeaderMidOrdinate}" />
-                <DataGridTemplateColumn>
+                    Header="{helpers:ResourceHelper Name=ColumnHeaderMidOrdinate}" />
+                <DataGridTemplateColumn Header="{helpers:ResourceHelper Name=ColumnHeaderColor}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate DataType="models:DescriptionKey">
                             <ComboBox
