--- a/src/StringMaster/UserControls/StringCogoPointsView.xaml
+++ b/src/StringMaster/UserControls/StringCogoPointsView.xaml
@@ -2,6 +2,7 @@
     x:Class="StringMaster.UserControls.StringCogoPointsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:StringMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="clr-namespace:StringMaster.Helpers"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -21,6 +22,8 @@
                 <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+            <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter" />
             <Style TargetType="Image">
                 <Setter Property="Width" Value="16" />
                 <Setter Property="Height" Value="16" />
@@ -129,6 +132,36 @@
                     Width="150"
                     Binding="{Binding Layer, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     Header="{helpers:ResourceHelper Name=ColumnHeaderLayer}" />
+                <DataGridTemplateColumn Width="200" Header="{helpers:ResourceHelper Name=ColumnHeaderLayer}">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate DataType="models:DescriptionKey">
+                            <ComboBox
+                                x:Name="LayerComboBox"
+                                Height="25"
+                                HorizontalAlignment="Stretch"
+                                VerticalContentAlignment="Center"
+                                ItemsSource="{Binding LayerService.Layers, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                SelectedItem="{Binding AcadLayer, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate DataType="models:AcadLayer">
+                                        <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                                            <Image Source="{StaticResource LayerOnImage}" Visibility="{Binding IsOn, Mode=OneWay}" />
+                                            <Image Source="{StaticResource LayerOffImage}" Visibility="{Binding IsOn, Mode=OneWay, Converter={StaticResource InverseBooleanToVisibilityConverter}}" />
+                                            <Label
+                                                Width="15"
+                                                Height="15"
+                                                Margin="3,0,0,0"
+                                                Background="{Binding Color.ColorBrush}"
+                                                BorderBrush="Black"
+                                                BorderThickness="1" />
+                                            <TextBlock Margin="3,0,0,0" Text="{Binding Name}" />
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTextColumn
                     Width="200"
                     Binding="{Binding Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -149,13 +182,13 @@
                     Width="50"
                     Binding="{Binding MidOrdinate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, FallbackValue=0.01}"
                     Header="{helpers:ResourceHelper Name=ColumnHeaderMidOrdinate}" />
-                <DataGridTemplateColumn Header="{helpers:ResourceHelper Name=ColumnHeaderColor}">
+                <DataGridTemplateColumn Width="200" Header="{helpers:ResourceHelper Name=ColumnHeaderColor}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate DataType="models:DescriptionKey">
                             <ComboBox
                                 x:Name="ComboBox"
-                                Width="200"
                                 Height="25"
+                                HorizontalAlignment="Stretch"
                                 VerticalContentAlignment="Center"
                                 ItemsSource="{Binding ColorPicker.Colors, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                 SelectedItem="{Binding AcadColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -172,10 +205,16 @@
                                                 BorderBrush="Black"
                                                 BorderThickness="1"
                                                 Visibility="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                                            <TextBlock Width="100" Text="{Binding Name}" />
+                                            <TextBlock Text="{Binding Name}" />
                                         </StackPanel>
                                     </DataTemplate>
                                 </ComboBox.ItemTemplate>
+                                <!--  TODO: Replace event with command?  -->
+                                <!-- <i:Interaction.Triggers> -->
+                                <!--     <EventTrigger EventName="SelectionChanged"> -->
+                                <!--         <i:InvokeCommandAction Command="{Binding SelectionChangedCommand}"/> -->
+                                <!--     </EventTrigger> -->
+                                <!-- </i:Interaction.Triggers> -->
                             </ComboBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
