--- a/src/StringMaster/UserControls/StringCogoPointsView.xaml
+++ b/src/StringMaster/UserControls/StringCogoPointsView.xaml
@@ -2,7 +2,6 @@
     x:Class="StringMaster.UserControls.StringCogoPointsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:StringMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="clr-namespace:StringMaster.Helpers"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -23,7 +22,6 @@
                 <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-            <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter" />
             <Style TargetType="Image">
                 <Setter Property="Width" Value="16" />
                 <Setter Property="Height" Value="16" />
@@ -99,7 +97,7 @@
                             Stretch="Uniform" />
                     </Border>
                 </Button>
-                <Button Margin="7,0,0,0" Style="{StaticResource ToolBarButton}">
+                <Button Margin="3,0,0,0" Style="{StaticResource ToolBarButton}">
                     <Image Source="{StaticResource HelpToolBarIcon}" />
                 </Button>
             </ToolBar>
@@ -107,57 +105,65 @@
         <DataGrid
             x:Name="DataGrid"
             HorizontalContentAlignment="Center"
-            AlternationCount="6"
             AutoGenerateColumns="False"
-            Background="{StaticResource YellowBackground}"
             CanUserAddRows="False"
             CanUserDeleteRows="False"
             CanUserReorderColumns="False"
             CanUserSortColumns="False"
             CellStyle="{StaticResource DataGridCellCenter}"
             ColumnHeaderStyle="{StaticResource DataGridHeader}"
+            CurrentItem="{Binding SelectedKey, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             HorizontalGridLinesBrush="{StaticResource BlueGridLine}"
-            ItemsSource="{Binding DescriptionKeys}"
-            RowBackground="{StaticResource YellowBackground}"
-            RowStyle="{StaticResource DataGridAlternatingRowBackground}"
-            SelectedItem="{Binding SelectedKey}"
+            ItemsSource="{Binding DescriptionKeys, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectionMode="Single"
+            SelectionUnit="FullRow"
             VerticalGridLinesBrush="{StaticResource RedGridLine}">
             <DataGrid.Columns>
-                <DataGridTextColumn
-                    Width="80"
-                    Binding="{Binding Key, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Header="{helpers:ResourceHelper Name=ColumnHeaderKey}" />
+                <DataGridTemplateColumn Width="80" Header="{helpers:ResourceHelper Name=ColumnHeaderKey}">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate DataType="models:DescriptionKey">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="16" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Image
+                                    Width="16"
+                                    Height="16"
+                                    Source="{StaticResource KeyIcon}"
+                                    Stretch="Uniform" />
+                                <TextBlock Grid.Column="1" Text="{Binding Key, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.CellEditingTemplate>
+                        <DataTemplate DataType="models:DescriptionKey">
+                            <TextBox Text="{Binding Key, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellEditingTemplate>
+                </DataGridTemplateColumn>
+                <!--  <DataGridTextColumn  -->
+                <!--  Width="80"  -->
+                <!--  Binding="{Binding Key, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  -->
+                <!--  Header="{helpers:ResourceHelper Name=ColumnHeaderKey}" />  -->
                 <DataGridTemplateColumn Width="200" Header="{helpers:ResourceHelper Name=ColumnHeaderLayer}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate DataType="models:DescriptionKey">
-                            <ComboBox
-                                x:Name="LayerComboBox"
-                                Height="25"
-                                HorizontalAlignment="Stretch"
-                                VerticalContentAlignment="Center"
-                                ItemsSource="{Binding DataContext.Layers, ElementName=UserControl}"
-                                SelectedItem="{Binding AcadLayer, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                                <ComboBox.ItemTemplate>
-                                    <DataTemplate DataType="models:AcadLayer">
-                                        <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
-                                            <Image Source="{StaticResource LayerOnImage}" Visibility="{Binding IsOn, Mode=OneWay}" />
-                                            <Image Source="{StaticResource LayerOffImage}" Visibility="{Binding IsOn, Mode=OneWay, Converter={StaticResource InverseBooleanToVisibilityConverter}}" />
-                                            <Image Source="{StaticResource LayerFreezeImage}" Visibility="{Binding IsFrozen, Mode=OneWay, Converter={StaticResource InverseBooleanToVisibilityConverter}}" />
-                                            <Image Source="{StaticResource LayerThawImage}" Visibility="{Binding IsFrozen, Mode=OneWay}" />
-                                            <Image Source="{StaticResource LayerLockImage}" Visibility="{Binding IsLocked, Mode=OneWay, Converter={StaticResource InverseBooleanToVisibilityConverter}}" />
-                                            <Image Source="{StaticResource LayerUnlockImage}" Visibility="{Binding IsLocked, Mode=OneWay}" />
-                                            <Label
-                                                Width="15"
-                                                Height="15"
-                                                Margin="3,0,0,0"
-                                                Background="{Binding Color.ColorBrush}"
-                                                BorderBrush="Black"
-                                                BorderThickness="1" />
-                                            <TextBlock Margin="3,0,0,0" Text="{Binding Name}" />
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </ComboBox.ItemTemplate>
-                            </ComboBox>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="16" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.InputBindings>
+                                    <MouseBinding Command="{Binding DataContext.LayerSelectCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" Gesture="LeftDoubleClick" />
+                                </Grid.InputBindings>
+                                <CheckBox
+                                    Grid.Column="0"
+                                    Margin="0,0,3,0"
+                                    IsChecked="{Binding AcadLayer.IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBlock Grid.Column="1" Text="{Binding AcadLayer.Name}" />
+                            </Grid>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -182,7 +188,7 @@
                         <DataTemplate DataType="models:DescriptionKey">
                             <ComboBox
                                 x:Name="ComboBox"
-                                Height="25"
+                                Height="21"
                                 HorizontalAlignment="Stretch"
                                 VerticalContentAlignment="Center"
                                 ItemsSource="{Binding ColorPicker.Colors, RelativeSource={RelativeSource AncestorType=UserControl}}"
