--- a/src/StringMaster/Dialogs/LayerCreateDialog.xaml
+++ b/src/StringMaster/Dialogs/LayerCreateDialog.xaml
@@ -3,10 +3,122 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:StringMaster.Dialogs"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    xmlns:properties="clr-namespace:StringMaster.Models"
+    xmlns:resources="clr-namespace:StringMaster.Resources"
+    Title="Create Layer"
+    Width="435"
+    Height="300"
+    MinWidth="435"
+    d:DesignHeight="300"
+    d:DesignWidth="435"
+    Background="#F0F0F0"
     mc:Ignorable="d">
-    <Grid />
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/Button.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/ComboBox.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Grid Margin="8,8,8,0">
+        <Grid.Resources>
+            <DataTemplate x:Key="TextTemplate" DataType="{x:Type properties:StringProperty}">
+                <TextBlock
+                    Height="20"
+                    IsEnabled="{Binding IsReadOnly}"
+                    Text="{Binding Value}" />
+            </DataTemplate>
+            <DataTemplate x:Key="TextEditTemplate" DataType="{x:Type properties:StringProperty}">
+                <TextBox
+                    Height="20"
+                    IsEnabled="{Binding IsReadOnly}"
+                    Text="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            </DataTemplate>
+            <DataTemplate x:Key="ColorTemplate" DataType="{x:Type properties:ColorProperty}">
+                <StackPanel Height="20" Orientation="Horizontal">
+                    <Label
+                        Width="15"
+                        Height="14"
+                        Margin="0,0,8,0"
+                        Background="{Binding Value.ColorBrush}"
+                        BorderBrush="Black"
+                        BorderThickness="1" />
+                    <TextBlock Text="{Binding Value.NameStringLower}" />
+                </StackPanel>
+            </DataTemplate>
+            <DataTemplate x:Key="SelectYesNoTemplate" DataType="{x:Type properties:SelectYesNoProperty}">
+                <ComboBox
+                    Height="20"
+                    ItemsSource="{Binding DataContext.YesNoSelect, RelativeSource={RelativeSource AncestorType=Window}}"
+                    SelectedItem="{Binding Value, Mode=TwoWay}"
+                    Style="{StaticResource ComboBoxFlatStyle}" />
+            </DataTemplate>
+            <resources:PropertyTemplateSelector
+                x:Key="PropertyTemplateSelector"
+                ColorTemplate="{StaticResource ColorTemplate}"
+                SelectYesNoTemplate="{StaticResource SelectYesNoTemplate}"
+                TextTemplate="{StaticResource TextTemplate}" />
+            <resources:PropertyEditTemplateSelector x:Key="PropertyEditTemplateSelector" TextTemplate="{StaticResource TextEditTemplate}" />
+        </Grid.Resources>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <DataGrid
+            Grid.ColumnSpan="2"
+            AutoGenerateColumns="False"
+            Background="#F5F5F5"
+            CanUserAddRows="False"
+            CanUserDeleteRows="False"
+            CanUserReorderColumns="False"
+            CanUserResizeRows="False"
+            CanUserSortColumns="False"
+            HorizontalGridLinesBrush="#E3E3E3"
+            ItemsSource="{Binding Properties}"
+            RowHeaderWidth="0"
+            VerticalGridLinesBrush="#E3E3E3">
+            <DataGrid.Columns>
+                <DataGridTextColumn
+                    Width="200"
+                    Binding="{Binding Name}"
+                    Header="Property"
+                    IsReadOnly="True" />
+                <DataGridTemplateColumn
+                    Width="200"
+                    CellEditingTemplateSelector="{StaticResource PropertyEditTemplateSelector}"
+                    CellTemplateSelector="{StaticResource PropertyTemplateSelector}"
+                    Header="Values" />
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <StackPanel
+            Grid.Row="1"
+            Grid.Column="1"
+            Margin="0,13"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button
+                x:Name="ButtonOK"
+                Width="76"
+                Height="21"
+                Margin="8,0,8,0"
+                Click="ButtonOK_Click"
+                Command="{Binding NewLayerCommand}"
+                Content="OK" />
+            <Button
+                x:Name="ButtonCancel"
+                Width="76"
+                Height="21"
+                Click="ButtonCancel_Click"
+                Content="Cancel" />
+        </StackPanel>
+    </Grid>
 </Window>
